--- a/card.html
+++ b/card.html
@@ -49,7 +49,7 @@
     <section class="card-title section">
         <div class="card-back">
             <a href="#!"><i class="fa-solid fa-chevron-left"></i></a>
-            <a href="index.html">Назад</a>
+            <a href="catalog.html">Назад</a>
         </div>
         <div class="card-kroshki">
             <a href="#!">Главная</a>
